--- a/server/package.json
+++ b/server/package.json
@@ -16,13 +16,17 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "mailgun-js": "^0.6.7",
     "mongodb": "^6.6.2",
     "mongoose": "^5.7.14",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0",
+    "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0",
     "stripe": "^15.7.0"
   }
 }
