--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
+    "@vis.gl/react-google-maps": "^1.1.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
