--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.4.0"
   },
