--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@vis.gl/react-google-maps": "^1.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
-    "next": "^14.2.5",
+    "net": "^1.0.2",
+    "next": "^15.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "server-only": "^0.0.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
@@ -27,6 +31,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.33",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
