--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.1.0",
@@ -19,7 +20,7 @@
     "next": "^15.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.2",
@@ -27,7 +28,8 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "tailwind-merge": "^2.4.0",
-    "use-deep-compare-effect": "^1.8.1"
+    "use-deep-compare-effect": "^1.8.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
