--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.1.0",
+    "chroma-js": "^3.1.2",
     "iso-639-1": "^3.1.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
@@ -33,6 +34,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/chroma-js": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
