--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,13 +15,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.1.0",
     "chroma-js": "^3.1.2",
+    "framer-motion": "^11.18.1",
     "iso-639-1": "^3.1.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
     "net": "^1.0.2",
-    "next": "^15.0.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.1.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
@@ -36,16 +37,20 @@
   "devDependencies": {
     "@types/chroma-js": "^3.1.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
     "@types/react-redux": "^7.1.33",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint-config-next": "15.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tailwindcss-motion": "^0.4.3-beta",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3"
   }
 }
