--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "net": "^1.0.2",
     "next": "^15.1.5",
     "react": "^19.0.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
