--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.1.0",
     "chroma-js": "^3.1.2",
+    "country-state-picker": "^1.1.5",
     "framer-motion": "^11.18.1",
     "iso-639-1": "^3.1.3",
     "jwt-decode": "^4.0.0",
