--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@vis.gl/react-google-maps": "^1.1.0",
     "chroma-js": "^3.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "country-state-picker": "^1.1.5",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.1",
     "iso-639-1": "^3.1.3",
     "jwt-decode": "^4.0.0",
@@ -32,7 +37,8 @@
     "server-only": "^0.0.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-deep-compare-effect": "^1.8.1",
     "yup": "^1.4.0"
   },
