--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.2",
+    "react-toastify": "^11.0.3",
     "server-only": "^0.0.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
