--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mangopay/checkout-sdk-react": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/currency-formatter": "^1.5.4",
     "@vis.gl/react-google-maps": "^1.1.0",
     "chroma-js": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-state-picker": "^1.1.5",
+    "currency-formatter": "^1.5.9",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "emoji-flags": "^1.3.0",
     "framer-motion": "^11.18.1",
-    "iso-639-1": "^3.1.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
     "net": "^1.0.2",
@@ -33,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
+    "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.2",
     "react-toastify": "^11.0.3",
