--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@mangopay/checkout-sdk-react": "^1.2.1",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/currency-formatter": "^1.5.4",
+    "@types/emoji-flags": "^1.3.3",
     "@vis.gl/react-google-maps": "^1.1.0",
     "chroma-js": "^3.1.2",
     "class-variance-authority": "^0.7.1",
