--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "embla-carousel-react": "^8.5.2",
     "emoji-flags": "^1.3.0",
     "framer-motion": "^11.18.1",
+    "i18next": "^24.2.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
     "net": "^1.0.2",
     "next": "^15.1.5",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^3.26.5",
     "react": "^19.0.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.3.0",
     "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.1.2",
