--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tabler/icons-react": "^3.31.0",
     "@types/currency-formatter": "^1.5.4",
     "@types/emoji-flags": "^1.3.3",
     "@vis.gl/react-google-maps": "^1.1.0",
@@ -27,7 +28,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "emoji-flags": "^1.3.0",
-    "framer-motion": "^11.18.1",
+    "framer-motion": "^11.18.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
     "net": "^1.0.2",
@@ -37,6 +38,7 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-easy-crop": "^5.4.1",
     "react-icons": "^5.3.0",
     "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.1.2",
