--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.19.3",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "9.0.0-alpha.8",
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.31.0",
     "@types/currency-formatter": "^1.5.4",
@@ -38,7 +40,6 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
-    "react-easy-crop": "^5.4.1",
     "react-icons": "^5.3.0",
     "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.1.2",
@@ -49,7 +50,10 @@
     "stompjs": "^2.3.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.174.0",
+    "three-globe": "^2.42.2",
     "use-deep-compare-effect": "^1.8.1",
+    "websockets": "^0.2.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
